# Hi-ElasticJob

./: README.md  et --hard HEAD^q
Common/mysql++/: .bakefile_gen.state  Makefile  Makefile.in  Makefile.mingw  Makefile.simple  abi.xml  aclocal.m4  cgi_jpeg  config.h  config.h.in  config.status  configure  cpool  dbinfo  deadlock  fieldinf  for_each  install.hta  libmysqlpp.so.3  libtool  load_jpeg  multiquery  mysql++.spec  resetdb  simple1  simple2  simple3  ssqls1  ssqls2  ssqls3  ssqls4  ssqls5  ssqls6  ssqlsxlat  store_if  test_array_index  test_cpool  test_datetime  test_insertpolicy  test_inttypes  (+17 more)
Common/mysql++/.deps/: cgi_jpeg_cgi_jpeg.o.d  cpool_cpool.o.d  dbinfo_dbinfo.o.d  deadlock_deadlock.o.d  excommon_printdata.o.d  fieldinf_fieldinf.o.d  for_each_for_each.o.d  load_jpeg_load_jpeg.o.d  multiquery_multiquery.o.d  mysqlpp_beemutex.o.d  mysqlpp_cmdline.o.d  mysqlpp_connection.o.d  mysqlpp_cpool.o.d  mysqlpp_datetime.o.d  mysqlpp_dbdriver.o.d  mysqlpp_field_names.o.d  mysqlpp_field_types.o.d  mysqlpp_manip.o.d  mysqlpp_myset.o.d  mysqlpp_mysql++.o.d  mysqlpp_mystring.o.d  mysqlpp_null.o.d  mysqlpp_options.o.d  mysqlpp_qparms.o.d  mysqlpp_query.o.d  mysqlpp_result.o.d  mysqlpp_row.o.d  mysqlpp_scopedconnection.o.d  mysqlpp_sql_buffer.o.d  mysqlpp_sqlstream.o.d  mysqlpp_ssqls2.o.d  mysqlpp_stadapter.o.d  mysqlpp_tcp_connection.o.d  mysqlpp_transaction.o.d  mysqlpp_type_info.o.d  mysqlpp_uds_connection.o.d  mysqlpp_utility.o.d  mysqlpp_vallist.o.d  mysqlpp_wnp_connection.o.d  resetdb_resetdb.o.d  (+34 more)
Common/mysql++/examples/: test
Common/mysql++/lib/: Doxyfile
Common/mysql++/mysql++.xcodeproj/: project.pbxproj
Common/mysql++/ssx/: Doxyfile
Common/mysql++/vc2003/: mysql++.sln  mysql++_cpool.vcproj  mysql++_dbinfo.vcproj  mysql++_deadlock.vcproj  mysql++_excommon.vcproj  mysql++_fieldinf.vcproj  mysql++_load_jpeg.vcproj  mysql++_multiquery.vcproj  mysql++_mysqlpp.vcproj  mysql++_resetdb.vcproj  mysql++_simple1.vcproj  mysql++_simple2.vcproj  mysql++_simple3.vcproj  mysql++_ssqls2parse.vcproj  mysql++_ssqlsxlat.vcproj  mysql++_test_array_index.vcproj  mysql++_test_cpool.vcproj  mysql++_test_datetime.vcproj  mysql++_test_insertpolicy.vcproj  mysql++_test_inttypes.vcproj  mysql++_test_manip.vcproj  mysql++_test_qstream.vcproj  mysql++_test_query_copy.vcproj  mysql++_test_sqlstream.vcproj  mysql++_test_ssqls2.vcproj  mysql++_test_tcp.vcproj  mysql++_test_uds.vcproj  mysql++_test_wnp.vcproj  mysql++_tquery1.vcproj  mysql++_tquery2.vcproj  mysql++_tquery3.vcproj  mysql++_tquery4.vcproj
Common/mysql++/vc2005/: mysql++.sln  mysql++_cgi_jpeg.vcproj  mysql++_cpool.vcproj  mysql++_dbinfo.vcproj  mysql++_deadlock.vcproj  mysql++_excommon.vcproj  mysql++_fieldinf.vcproj  mysql++_for_each.vcproj  mysql++_load_jpeg.vcproj  mysql++_multiquery.vcproj  mysql++_mysqlpp.vcproj  mysql++_resetdb.vcproj  mysql++_simple1.vcproj  mysql++_simple2.vcproj  mysql++_simple3.vcproj  mysql++_ssqls1.vcproj  mysql++_ssqls2.vcproj  mysql++_ssqls2parse.vcproj  mysql++_ssqls3.vcproj  mysql++_ssqls4.vcproj  mysql++_ssqls5.vcproj  mysql++_ssqls6.vcproj  mysql++_ssqlsxlat.vcproj  mysql++_store_if.vcproj  mysql++_test_array_index.vcproj  mysql++_test_cpool.vcproj  mysql++_test_datetime.vcproj  mysql++_test_insertpolicy.vcproj  mysql++_test_inttypes.vcproj  mysql++_test_manip.vcproj  mysql++_test_null_comparison.vcproj  mysql++_test_qssqls.vcproj  mysql++_test_qstream.vcproj  mysql++_test_query_copy.vcproj  mysql++_test_sqlstream.vcproj  mysql++_test_ssqls2.vcproj  mysql++_test_string.vcproj  mysql++_test_tcp.vcproj  mysql++_test_uds.vcproj  mysql++_test_wnp.vcproj  (+5 more)
Common/mysql++/vc2008/: mysql++.sln  mysql++_cgi_jpeg.vcproj  mysql++_cpool.vcproj  mysql++_dbinfo.vcproj  mysql++_deadlock.vcproj  mysql++_excommon.vcproj  mysql++_fieldinf.vcproj  mysql++_for_each.vcproj  mysql++_load_jpeg.vcproj  mysql++_multiquery.vcproj  mysql++_mysqlpp.vcproj  mysql++_resetdb.vcproj  mysql++_simple1.vcproj  mysql++_simple2.vcproj  mysql++_simple3.vcproj  mysql++_ssqls1.vcproj  mysql++_ssqls2.vcproj  mysql++_ssqls2parse.vcproj  mysql++_ssqls3.vcproj  mysql++_ssqls4.vcproj  mysql++_ssqls5.vcproj  mysql++_ssqls6.vcproj  mysql++_ssqlsxlat.vcproj  mysql++_store_if.vcproj  mysql++_test_array_index.vcproj  mysql++_test_cpool.vcproj  mysql++_test_datetime.vcproj  mysql++_test_insertpolicy.vcproj  (+17 more)
Project/: CMakeLists.txt  README
Project/src/: hello.cc
Project/src/base/: CMakeLists.txt  ConfigManager.cc  ConfigManager.h  DBBaseConn.cc  DBBaseConn.h  DBConnPool.cc  DBConnPool.h  DBManager.cc  DBManager.h  Error.cc  Error.h  GuidUtil.cc  GuidUtil.h  MessageLoopByThreadPool.cc  MessageLoopByThreadPool.h  RedisController.cc  RedisController.h  Singleton.h  StringUtils.h  Task.h  ThreadSafeList.h  ThreadUtils.cc  ThreadUtils.h  ThreadWrap.h  Time.cc  Time.h  Timer.cc  Timer.h  TimerCounter.cc  TimerCounter.h
Project/src/base/examples/: DBTest.cc
Project/src/base/test/: DBCommonTest.cc  DBTest.cc  DBTransactionTest.cc  GuidTest.cc  RedisTest.cc  StringTest.cc  TimeTest.cc  TimerTest.cc
Project/src/elasticJob/: CMakeLists.txt
Project/src/elasticJob/Base/: ElasticJobTypeDefs.h  Errors.cc  Errors.h  LogHelper.cc  LogHelper.h  MainFor_Unittest.cc  Makefile  elastic_job.grpc.pb.cc  elastic_job.grpc.pb.h  elastic_job.pb.cc  elastic_job.pb.h  elastic_job.proto
Project/src/elasticJob/Client/: ElasticJobClient.h  ElasticJobClientImpl.cc  ElasticJobClientImpl.h
Project/src/elasticJob/Service/: ElasticJobService.h  ElasticJobServiceImpl.cc  ElasticJobServiceImpl.h  ElasticJobService_Unittest.cc  ElasticLeader.cc  ElasticLeader.h  Job.cc  Job.h  JobRunner.h  LocalWorkClient.cc  LocalWorkClient.h  ParallelStrategy.cc  ParallelStrategy.h  ServiceErrors.cc  ServiceErrors.h  SheduleTime.cc  SheduleTime.h  Storage.cc  Storage.h  Worker.cc  Worker.h  WorkerClient.h  WorkerClientProxy.cc  WorkerClientProxy.h
Project/src/elasticJob/Service/Proto/: Makefile  elasticjob_worker_service.grpc.pb.cc  elasticjob_worker_service.grpc.pb.h  elasticjob_worker_service.pb.cc  elasticjob_worker_service.pb.h  elasticjob_worker_service.proto
(+190 files in other folders)
